--- a/index.html
+++ b/index.html
@@ -13,17 +13,9 @@ title: victorylanesa.com
 </head>
 
 <body>
-    <h1>Let's learn HTML, CSS and JavaScript using Jekyll</h1>
-    <h3>What is Jekyll?</h3> <span>&lt;&lt; Click the question</span>
-    <div id="description">
-        <img class="logo" src="{{ site.github.url }}/images/logo-2x.png" alt="logo image">
-        <p>A static site generator that converts templates and raw text files into a plain HTML website that's ready to be publish on any web server. </p>
+    <div>
+        <h1>Hello World</h1>
     </div>
-    <div class="buttons">
-        <button id="button1">A random Integer</button>
-        <button id="button2">A random Integer between 1 and 20</button>
-    </div>
-    <div id="output"></div>
     <script src="{{ site.github.url }}/js/bundle.js"></script>
 </body>
 </html>
