--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 ---
-title: victorylanesa.com
+layout: default
+title: Carwash San Antonio
 ---
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="{{ site.github.url }}/css/main.css" type="text/css" />
-</head>
 
-<body>
-    <div>
-        <h1>Hello World</h1>
-    </div>
-    <script src="{{ site.github.url }}/js/bundle.js"></script>
-</body>
-</html>
+<h1>Coming Soon...</h1>
